Fixed Navbar on mobile

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,11 +1,11 @@
 .hero {
  width: 100%;
- border-radius: 8px;
  height: 300px;
  margin-bottom: 3rem;
  display: flex;
  justify-content: center;
  align-items: center;
+ background-color: var(--color-secondary);
 }
 
 .hero__input {
