--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -22,7 +22,7 @@
 }
 
 .navbar__item {
- margin-left: 5rem;
+ margin-left: 2rem;
  list-style: none;
 }
 
